force-app/main/default/objects/AI_Prompt_Scheduler__c/AI_Prompt_Scheduler__c.object-meta.xml
<CustomObject>
    <label>Prompt Scheduler</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prompt Scheduler</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>