force-app/main/default/objects/AI_Prompt_Scheduler__c/fields/AI_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>AI_Scheduler__c</fullName>
    <label>AI Mass Processing</label>
    <referenceTo>AI_Scheduler__c</referenceTo>
    <relationshipLabel>Prompt Scheduler</relationshipLabel>
    <relationshipName>Prompt_Scheduler</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>