force-app/main/default/objects/AI_Prompt_Scheduler__c/fields/Cross_Object_Filter_Condition__c.field-meta.xml
<CustomField>
    <fullName>Cross_Object_Filter_Condition__c</fullName>
    <label>Cross Object Filter Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>