force-app/main/default/objects/AI_Prompt_Scheduler__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <formula>Prompt__r.Object__c</formula>
    <label>Object Name</label>
    <type>Text</type>
</CustomField>