force-app/main/default/objects/AI_Prompt_Scheduler__c/fields/Record_Limit__c.field-meta.xml
<CustomField>
    <fullName>Record_Limit__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Record Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>